--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "gulp-eslint": "^3.0.1",
     "gulp-phpcs": "^1.1.1",
     "pre-commit": "^1.1.3"
-  }
+  },
+  "pre-commit": [
+    "test"
+  ]
 }
