--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.1.1",
   "description": "wordpress plugin for management of voxusini monthly pdf issue",
   "scripts": {
-    "postinstall": "npm run composer -- create-project wp-coding-standards/wpcs:dev-master --no-dev --keep-vcs",
+    "postinstall": "npm run install:wpcs",
+    "install:wpcs": "npm run rimraf -- wpcs && npm run composer -- create-project wp-coding-standards/wpcs:dev-master --no-dev --keep-vcs",
     "test": "npm run lint:php && npm run lint:js",
     "lint:php": "npm run phpcs -- --extensions=php",
     "lint:js": "eslint .",
     "composer": "php ./node_modules/getcomposer/composer.phar",
-    "phpcs": "./wpcs/vendor/bin/phpcs"
+    "phpcs": "./wpcs/vendor/bin/phpcs",
+    "rimraf": "rimraf"
   },
   "repository": {
     "type": "git",
@@ -28,7 +30,8 @@
     "eslint": "^3.2.2",
     "eslint-plugin-wordpress": "git+https://github.com/ntwb/eslint-plugin-wordpress.git",
     "getcomposer": "^1.3.2",
-    "pre-commit": "^1.1.3"
+    "pre-commit": "^1.1.3",
+    "rimraf": "^2.5.4"
   },
   "pre-commit": [
     "test"
